--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div class="container">
-    <div id="app"></div>
+    <div id="app" class="container"></div>
 
     </div>
     <script src=js/chunk-vendors.9359f602.js>
