--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href=js/chunk-vendors.9359f602.js rel=preload as=script>
     <link href=css/chunk-vendors.2402050c.css rel=stylesheet>
     <link href=css/app.4dd9d252.css rel=stylesheet>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   </head>
   <body>
     <noscript>
